# dirscan

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml
src/: args.rs  directory_stat.rs  formats.rs  main.rs  progress.rs  state.rs  walker.rs
