[package]
name = "dirscan"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.11"
structopt = "0.3.11"
num_cpus = "1.12.0"
exitcode = "1.1.2"
indexmap = "1.3.2"
crossbeam-channel = "0.4.2"
indicatif = "0.14.0"
console = "0.10.0"
serde_json = "1.0.50"
serde = { version = "1", features = ["derive"] }
csv = "1.1.3"
enum-utils = "0.1.2"
chrono = { version = "0.4.11", features = ["serde"] }
failure = "0.1.7"
prettytable-rs = "0.8.0"
timeago = "0.2.0"
lazy_static = "1.4.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
