[package]
name = "dirscan"
version = "0.2.1-alpha.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
readme = "README.md"
description = "A high performance tool for summarizing large directories or drives"
repository = "https://github.com/orf/dirscan"
license = "MIT"

[dependencies]
structopt = "0.3.11"
strum = "0.18.0"
strum_macros = "0.18.0"
serde_json = "1.0.50"
serde = { version = "1", features = ["derive"] }
csv = "1.1.3"
jwalk = "0.5.1"
num_cpus = "1.12.0"
indicatif = "0.14.0"
console = "0.10.0"
indexmap = "1.3.2"
filesize = "0.2.0"
prettytable-rs = "0.8.0"
chrono = { version = "0.4.11", features = ["serde"] }
chrono-humanize = "0.0.11"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
