[package]
name = "dirscan"
version = "1.2.1-alpha.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
readme = "README.md"
description = "A high performance tool for summarizing large directories or drives"
repository = "https://github.com/orf/dirscan"
license = "MIT"

[dependencies]
structopt = "0.3.21"
strum = "0.20.0"
strum_macros = "0.20.1"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
csv = "1.1.6"
jwalk = "0.6.0"
num_cpus = "1.13.0"
indicatif = "0.15.0"
console = "0.14.0"
indexmap = "1.6.2"
filesize = "0.2.0"
prettytable-rs = "0.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.1.2"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.20.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
